--- a/src/components/css/item.css
+++ b/src/components/css/item.css
@@ -4,3 +4,12 @@
       width: 350px !important;
     }
   } */
+.scroll::-webkit-scrollbar{
+    width:20px;
+
+}
+body::-webkit-scrollbar-thumb {
+    background-color: blue;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid orange;  /* creates padding around scroll thumb */
+  }
