--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 body {
   /* background-color: #fafafa; */
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   margin-top: 80px !important;
 }
-h5{
-  font-family: 'BudapestaRomantesDemoVersion-R9qeM' !important; 
+.body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #f4f4f4;
+  color: #333;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+}
+h5 {
+  font-family: 'BudapestaRomantesDemoVersion-R9qeM' !important;
   src: url(./assets/budapesta-romantes-version-font/BudapestaRomantesDemoVersion-R9qeM.otf);
   font-weight: normal;
   font-style: normal;
 }
-.card{
+.container {
+  max-width: 600px;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 3em;
+  margin-bottom: 0.5em;
+  color: #333;
+}
+
+.maintenance-text {
+  font-size: 1.5em;
+  font-weight: 700;
+  margin-bottom: 1em;
+}
+
+p {
+  font-size: 1.2em;
+  line-height: 1.6;
+}
+.construction {
+  background-color: #f7f7f7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.card {
   text-align-last: left;
 }
 /* General styles for the arrows */
 .carousel .control-arrow {
-  background-color: rgba(0, 0, 0, 0.5); 
+  background-color: rgba(0, 0, 0, 0.5);
   top: 50px;
   border-radius: 50%; /* Round arrows */
   width: 40px;
@@ -25,9 +65,8 @@ h5{
   z-index: 2; /* Ensure arrows are above other elements */
   opacity: 1; /* Ensure arrows are always visible */
 }
-.carousel.carousel-slider .control-arrow{
+.carousel.carousel-slider .control-arrow {
   top: 300px !important;
-  
 }
 /* Center the arrows vertically */
 .carousel .control-prev.control-arrow {
@@ -51,5 +90,3 @@ h5{
   font-size: 20px; /* Adjust arrow icon size */
   color: white; /* Ensure icon is white */
 }
-
-
